# casemate

./: .clang-format  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  ACKNOWLEDGEMENTS  Cargo.toml  LICENSE  Makefile  README.md  configure
.github/workflows/: bump.yml  ci.yml  rocq.yml
configs/: BHYVEARM64  DEFAULT  FREEBSD_KERN
doc/: Makefile  howitworks.md  manual.html  overview.md  trace-format.md
doc/asciidoc/: .gitignore  Makefile  docinfo.template  generate_docinfo.py  manual.adoc  manual.bib  manual.html
doc/asciidoc/sections/: _lib_steps.adoc  intro.adoc  model.adoc  trace-format.adoc  usage_check.adoc  usage_lib.adoc
doc/logo/: Makefile  casemate_logo.tex
examples/: .gitignore  Makefile  README.md  bad_bbm_by_wrong_VMID  bad_race  bad_switch_wrong_vmid  common.c  common.h  configure  good_bbm_by_VMID  threads.h
examples/expected/: .gitignore
examples/scripts/: check_simulation.py  regenerate_expected.py  run_tests.py
examples/tests/: bad_EL2_ASID.c  bad_bbm_by_wrong_VMID.c  bad_bbm_missing_tlbi.c  bad_free_page_without_clean.c  bad_no_assoc_lock.c  bad_no_bbm.c  bad_no_bbm_stage1.c  bad_no_write_auth.c  bad_overlap_ASID.c  bad_overlap_VMID.c  bad_race.c  bad_reuse_page.c  bad_switch_wrong_vmid.c  bad_unlocked_write.c  good_bbm.c  good_bbm_by_VMID.c  good_bbm_stage1.c  good_free_page.c  good_free_tree.c  good_release_table.c  good_switch.c  good_trylock.c  good_write.c  good_write_child.c  simple.c
pKVM-simplified-model/: Makefile  README.md  _CoqProject  cmap.opam  dune  dune-project  simplified.opam  simplified.v
pKVM-simplified-model/cmap/: cmap.ml  cmap.mli  dune
pKVM-simplified-model/extraction/: dune  extraction.v
pKVM-simplified-model/parsing/: dune  iters.ml  iters.mli  lexer.mll  menhir_parser.mly  parser.ml  pp.ml
pKVM-simplified-model/src/: dune  parser_v1.ml  parser_v2.ml  simplified.ml
pKVM-simplified-model/theories/: automata.v  dune  genericWalk.v  main.v  simplified.v  state.v  step.v  transition.v  utils.v
pKVM-simplified-model/zmap/: dune  zmap.mli  zmap.v
src/casemate-check/: .gitignore  Cargo.toml  Makefile  README.md  casemate.opam  simplified.opam
src/casemate-check-c/: .gitignore  Makefile  README.md  configure
src/casemate-check-c/include/: casemate-check-impl.h
src/casemate-check-c/src/: driver.c  main.c  opts.c  parser.c
src/casemate-check-rocq/: .gitignore  Casemate.opam  Makefile  README.md  _CoqProject  _opam  addr_test.sh  casemate.opam  dune-project  loc_count.sh
src/casemate-check-rocq/archive/extraction/: Za.ml  dune  extraction.v
src/casemate-check-rocq/archive/src/: dune  iters.ml  iters.mli  menhir_parser.mly  pp.ml
src/casemate-check-rocq/cmap/: cmap.mli  dune
src/casemate-check-rocq/extraction/: Extraction.v  Za.ml  dune  extraction.v
src/casemate-check-rocq/src/: casemate.ml  dune  iters.ml  iters.mli  lexer.mll  menhir_parser.mly  parser.ml  parser_v2.ml  pp.ml
src/casemate-check-rocq/theories/: ArchHeader.v  Asserts.v  Blobs.v  Execution.v  Machine.v  Model.v  ModelHeader.v  Pgtable.v  PgtableHeader.v  Transitions.v  Types.v  common.v  dune  genericWalk.v  main.v  model.v  pgtable.v  state.v  step.v  transition.v  transitions.v  utils.v
src/casemate-check-rs/: Cargo.toml
src/casemate-check-rs/src/: con.rs  main.rs
src/casemate-check/cmap/: cmap.v
src/casemate-check/src/: err.rs  main.rs  opts.rs  parser_v2.ml
src/casemate-check/theories/: main.v
src/casemate-check/zmap/: zmap.ml
src/casemate-lib/: .gitignore  Cargo.toml  Makefile  README.md  casemate.h
src/casemate-lib-macros/: Cargo.toml
src/casemate-lib-macros/src/: coded_error.rs  lib.rs
src/casemate-lib-macros/src/diffimpl/: gen_enum.rs  gen_struct.rs  mod.rs
src/casemate-lib/src/: bits.rs  c_api.rs  errors.rs  ghost_driver.rs  hooks.rs  lib.rs  state.rs  steppable.rs  transitions.rs
src/casemate-lib/src/allocator/: global.rs  mod.rs
src/casemate-lib/src/allocator/heap_alloc/: impls.rs  mod.rs
src/casemate-lib/src/collections/: region_map.rs
src/casemate-lib/src/config/: de.rs  mod.rs
src/casemate-lib/src/model/: mod.rs  step.rs
src/casemate-lib/src/model/layers/: machine.rs  mod.rs
src/casemate-lib/src/model/layers/pgtable/: mod.rs  pgtable.rs  pte.rs  step.rs
src/casemate-lib/src/output/: impls.rs  mod.rs
src/casemate-lib/src/tracefmt/: mod.rs  parser.rs  pretty_printer.rs
src/casemate-lib/src/tracefmt/sexp/: de.rs  mod.rs  ser.rs
src/casemate-lib/tools/: generate_header.py
src/lib/: .gitignore  Makefile  Makefile.linux  casemate.h  configure  model.lds
src/lib-rs/: Cargo.toml  Makefile  casemate.h
src/lib-rs/src/: base_model.rs  errors.rs  ghost_driver.rs  hooks.rs  lib.rs  state.rs  steppable.rs  transitions.rs
src/lib-rs/src/collections/: mod.rs  region_map.rs
src/lib-rs/src/collections/diff/: impls.rs  macros.rs  mod.rs
src/lib-rs/src/config/: de.rs  mod.rs
src/lib-rs/src/formatters/: console.rs
src/lib-rs/src/heap_alloc/: allocator.rs  global.rs  mod.rs
src/lib-rs/src/layers/: counter.rs  machine.rs  mod.rs  pgtable.rs
src/lib-rs/src/loggers/: con.rs  mod.rs  null.rs
src/lib-rs/src/output/: mod.rs  textual.rs
src/lib-rs/src/tracefmt/: mod.rs  parser.rs  pretty_printer.rs  sexp.rs
src/lib/include/: casemate-ghost.h  casemate-impl.h  casemate.h
src/lib/include/casemate-impl/: arch.h  asserts.h  bitwise.h  dummy_macros.h  errno.h  ll.h  memcpy.h  model.h  options.h  pgtable.h  platform.h  printer.h  state.h  string.h  sync.h  transitions.h  types.h
src/lib/include/casemate-impl/platform/: FreeBSD.h  linux.h  std.h
src/lib/include/casemate-in/: casemate-config.in.h  casemate-ghost-types.in.h  casemate-ghost.out.h  casemate-helpers.in.h  casemate-state.in.h  casemate-transitions.in.h  casemate-version.in.h  casemate.out.h
src/lib/src/: model.c  pgtable.c  setup.c  trace.c  transitions.c
src/lib/src/utilities/: blobs.c  diff.c  printer.c  state_utils.c  string.c  sync.c
src/lib/tools/: generate_compile_commands.py  generate_header.py
tools/: build.mk  generate_compile_commands.py  lint.py  print_version.py  run_cmd.mk  utils.mk
