opam-version: "2.0"
name: "Cached map"
maintainer: "? <?@?>"
authors: "Thomas Fourier"
license: "BSD-3-Clause"
homepage: "https://github.com/rems-project/xxx"
bug-reports: "https://github.com/rems-project/xxx/issues"
dev-repo: "git+https://github.com/rems-project/xxx.git"

synopsis: "Cached map"

depends: [
    "zarith"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
