opam-version: "2.0"
name: "casemate"
maintainer: "Jean Pichon <jean.pichon@cs.au.dk>"
authors: ["Thomas Fourier <thomas.fourier@polytechnique.edu>" "Yeji Han <yeji.han@sf.snu.ac.kr>"]
license: "BSD-2-Clause"
homepage: "https://github.com/rems-project/casemate"
bug-reports: "https://github.com/rems-project/casemate/issues"
dev-repo: "git+https://github.com/rems-project/casemate.git"

synopsis: "Casemate offline checker"

depends: [
  "ocaml" {>= "4.14.0"}
  "dune"
  "coq" { (>= "8.19.0") & (<= "8.19.99") | (= "dev") }
  "coq-stdpp-unstable"
  "coq-record-update" { (= "0.3.3") | (= "dev") }
  "zarith"
  "fmt"
  "ppx_deriving"
  "ppx_import"
  "sexplib" {>= "v0.16"}
  "bisect_ppx" {dev & >= "2.5.0"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
