opam-version: "2.0"
name: "simplified"
maintainer: "? <?@?>"
authors: "Jean Pichon"
license: "BSD-3-Clause"
homepage: "https://github.com/rems-project/xxx"
bug-reports: "https://github.com/rems-project/xxx/issues"
dev-repo: "git+https://github.com/rems-project/xxx.git"

synopsis: "Simplified model"

depends: [
  "ocaml" {>= "4.14.0"}
  "dune"
  "coq" { (>= "8.19.0") & (<= "8.19.99") | (= "dev") }
  "coq-stdpp-unstable"
  "coq-record-update" { (= "0.3.3") | (= "dev") }
  "menhir" {= "20240715"}
  "zarith"
  "fmt"
  "ppx_deriving"
  "ppx_import"
  "sexplib" {>= "v0.16"}
  "bisect_ppx" {dev & >= "2.5.0"}
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
