[package]
name = "casemate"
version = "2.0.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
log = { version = "0.4", features = ["kv"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[features]

std = []
