(coq.extraction
 (prelude extraction)
 (theories casemate stdpp stdpp.bitvector RecordUpdate Cmap Zmap)
 (extracted_modules rocq_casemate))

(library
 (name extraction)
 (libraries zarith cmap zmap)
 (wrapped false)
 (instrumentation
  (backend bisect_ppx)))

(env
 (dev
  (flags
   (:standard -w -39))))
