(ocamllex
 (modules lexer))

(menhir
 (modules menhir_parser)
 (flags --explain --dump)
 (infer true))

(executable
 (public_name casemate)
 (name casemate)
 (preprocess
  (staged_pps ppx_import ppx_deriving.show))
 (libraries str zarith sexplib fmt fmt.tty cmdliner extraction)
 (package casemate))
